Fixed query return bug

--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -305,7 +305,7 @@ function setParams(params){
             var query = getParams().q==undefined?"":getParams().q
             var pageParams = {"q":query,"p":1};
             setParams(pageParams);
-            var params = {"search":query, page:1};
+            var params = {"search":results.query, page:1};
             $('.loading').toggle()
             $.post("/queries/geospatial_search", params, function(data){
                 results = data
@@ -317,7 +317,7 @@ function setParams(params){
             var query = getParams().q==undefined?"":getParams().q
             var pageParams = {"q":query,"p":results.current - 1};
             setParams(pageParams);
-            var params = {"search":query, page: results.current - 1};
+            var params = {"search":results.query, page: results.current - 1};
             $('.loading').toggle()
             $.post("/queries/geospatial_search", params, function(data){
                 results = data
@@ -329,7 +329,7 @@ function setParams(params){
             var query = getParams().q==undefined?"":getParams().q
             var pageParams = {"q":query,"p":results.current + 1};
             setParams(pageParams);
-            var params = {"search":query, page: results.current + 1};
+            var params = {"search":results.query, page: results.current + 1};
             $('.loading').toggle()
             $.post("/queries/geospatial_search", params, function(data){
                 results = data
@@ -341,7 +341,7 @@ function setParams(params){
             var query = getParams().q==undefined?"":getParams().q
             var pageParams = {"q":query,"p":results.pages};
             setParams(pageParams);
-            var params = {"search":query, page: results.pages};
+            var params = {"search":results.query, page: results.pages};
             $('.loading').toggle()
             $.post("/queries/geospatial_search", params, function(data){
                 results = data
