Removed duplicate education sector

--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -131,8 +131,7 @@
         22: "Emergency Response",
         23: "Administrative Costs of Donors",
         24: "Support to Non-governmental Organizations (NGOs) and Government Organizations",
-        25: "Unallocated / Unspecified",
-        26: "Education"
+        25: "Unallocated / Unspecified"
     },
     statuses = {
         1: "Pipeline/identification",
