Removing unofficial flow classes

--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -147,18 +147,9 @@
         1: "Unset",
         2: "ODA-like",
         3: "OOF-like",
-        4: "Military",
         5: "Vague (Official Finance)",
-        6: "NGO Aid",
-        7: "CA +Gov",
-        8: "CA -Gov",
-        9: "FDI +Gov",
-        10: "FDI -Gov",
-        11: "JV +Gov",
-        12: "JV -Gov",
         13: "Vague (Com)",
-        14: "Official Investment",
-        15: "OOF-Like"
+        14: "Official Investment"
     };
 //Get and Set Params
 function getParams(){
