--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -13,8 +13,8 @@
     #searchbar {width:40%;position:absolute;left:10px;opacity:0.9;padding-left:2px;}
     #searchbar .vissearch {width:100%;margin-bottom:0px !important;box-shadow:0 0 15px rgba(0,0,0,0.2);border: solid rgba(0,0,0,0.2) 1px;border-radius:0px;}
     #searchbar form {position:relative; right:10px; margin-bottom: 1px;height:32px;}
-    #left {float:left;width:25%;position:absolute;top:35px;left:2px;height:auto;max-height: -webkit-calc(100% - 110px); max-height: -moz-calc(100% - 110px); max-height: -ms-calc(100% - 110px); max-height: -o-calc(100% - 110px);  max-height: calc(100% - 110px);}
-    #searchresults {float:left;position:relative;height:auto;width:100%;overflow-y:scroll;background-color:#FFF;opacity:0.9;box-shadow:0 0 15px rgba(0,0,0,0.2);border: solid rgba(0,0,0,0.2) 1px;z-index:1;max-height:100%;}
+    #left {float:left;width:25%;position:absolute;top:35px;left:2px;height:auto;max-height: -webkit-calc(100% - 110px); max-height: -moz-calc(100% - 110px); max-height: -ms-calc(100% - 110px); max-height: -o-calc(100% - 110px);  max-height: calc(100% - 110px);overflow:scroll;}
+    #searchresults {float:left;position:relative;height:auto;width:100%;background-color:#FFF;opacity:0.9;box-shadow:0 0 15px rgba(0,0,0,0.2);border: solid rgba(0,0,0,0.2) 1px;z-index:1;max-height:100%;}
     #filtercontrol ol, #filtercontrol ul {margin:0 0 10px 10px;}
     #filtercontrol {float:right;position:absolute;right:2px;top:3px;box-shadow:0 0 15px rgba(0,0,0,0.2);border: solid rgba(0,0,0,0.2) 1px;height:auto;width:18%;padding:1px;background-color:#FFF;opacity:0.9;overflow-y:scroll;max-height: -webkit-calc(100% - 30px); max-height: -moz-calc(100% - 175px); max-height: -ms-calc(100% - 175px); max-height: -o-calc(100% - 175px);  max-height: calc(100% - 175px);}
     h4 {margin-left:5px;float:left;}
